--- a/CSS/indexx.css
+++ b/CSS/indexx.css
@@ -1,7 +1,7 @@
     header{
         display: flex;
         justify-content: space-between;
-        background-color: rgb(80, 78, 78);
+        background-color: #34495e;
         border-bottom: 10px solid #000;  
         padding-bottom: 15px;
         padding: 10px 20px;
@@ -42,7 +42,11 @@
         display: inline-block;
         background-color: #908C8C;
         padding: 25px 20px; 
-        box-shadow: 5px 5px 0 whitesmoke;
+        box-shadow: 5px 5px 0 #bdc3c7;
         margin: 0;
+        transition: transform 150ms lcubic-bezier(.74,-0.32,0,1.78);
+    }
 
+    #button:hover {
+        transform: scale(1.05); 
     }
