--- a/CSS/components/title.css
+++ b/CSS/components/title.css
@@ -1,6 +1,6 @@
 h1 {
-    font-family: 'Fira Sans semiBold';
+    font-family: 'Press Start 2P';
     font-size: 40px;
     color: rgb(245, 141, 141);
-    text-shadow: 3px 3px rgb(32, 32, 32);
+    text-shadow: 3px 3px 0 rgb(32, 32, 32);
 }
