--- a/CSS/components/box.css
+++ b/CSS/components/box.css
@@ -1,6 +1,11 @@
-#box {
-    background-color: #908C8C;
-    width: 627px;
-    height: 184px;
-    box-shadow: 5px 5px 0 black;
-}
+    #box {
+        display: inline-block;
+        background-color: #908C8C;
+        box-shadow: 5px 5px 0 black;
+        text-align: center;
+        padding: 42px 44px;
+    }
+
+    #box h1 {
+        margin-bottom: 28px;
+    }
