--- a/CSS/components/box.css
+++ b/CSS/components/box.css
@@ -1,4 +1,4 @@
-    #box {
+    .box {
         display: inline-block;
         background-color: #908C8C;
         box-shadow: 5px 5px 0 black;
@@ -6,6 +6,6 @@
         padding: 42px 44px;
     }
 
-    #box h1 {
+    .box .title {
         margin-bottom: 28px;
     }
