--- a/CSS/components/button.css
+++ b/CSS/components/button.css
@@ -3,11 +3,12 @@
             display: inline-block;
             background-color: #908C8C;
             padding: 25px 20px; 
-            box-shadow: 5px 5px 0 #bdc3c7;
+            box-shadow: 5px 5px 0px #bdc3c7;
             margin: 0;
             transition: transform 150ms lcubic-bezier(.74,-0.32,0,1.78);
             font-size: 20px;
             color: whitesmoke;
+            text-decoration: none;
         }
 
         .button:hover {
