fiz a variação do componente title com second

--- a/CSS/components/banner.css
+++ b/CSS/components/banner.css
@@ -1,9 +1,9 @@
 .banner {
     box-sizing: border-box;
-    background-image: url(../../assets/fundo.jpg);
+    background-image: url(../../assets/fundo3.jpg);
     background-repeat: no-repeat;
     background-size: 100%;
-    height: 1600px;
+    height: 713px;
     border-bottom: 10px solid #000;
     padding-top: 95px;
     padding-left: 90px;
