--- a/CSS/components/main-title.css
+++ b/CSS/components/main-title.css
@@ -3,6 +3,7 @@
     font-size: 40px;
     color: rgb(119, 80, 80);
     text-shadow: 3px 3px 0 #000;
+    margin-bottom: 30px;
 } 
 
 .main-title.-second {
